# mcp-scholar

./: .env.example  .gitignore  LICENSE  README.md  audit_obsidian.py  main.py  pyproject.toml  run-mcp.sh  run_antigravity.bat  temp_report.md
src/: __init__.py  __main__.py  config.py  server.py  server_antigravity.py  server_http.py
src/models/: __init__.py  author.py  paper.py
src/rate_limiting/: __init__.py  limiter.py
src/services/: __init__.py  deduplicator.py  merger.py  orchestrator.py
src/sources/: __init__.py  base.py  core.py  crossref.py  openalex.py  scix.py  scopus.py  semantic_scholar.py
tests/: __init__.py
